fixing font readability

--- a/css/main.css
+++ b/css/main.css
@@ -31,69 +31,69 @@ body {
 }
 
 html {
-  font-size: 14px;
+  font-size: 12px;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 300px) {
   html {
-    font-size: calc(14px + 10 * ((100vw - 320px) / 980));
+    font-size: calc(12px + 6 * ((100vw - 300px) / 1100));
   }
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1400px) {
   html {
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 
 h1 {
-  font-size: 1.728rem !important;
-  font-size: 14px;
+  font-size: 2.744rem !important;
+  font-size: 12px;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 300px) {
   h1 {
-    font-size: calc(14px + 10 * ((100vw - 320px) / 980));
+    font-size: calc(12px + 6 * ((100vw - 300px) / 1100));
   }
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1400px) {
   h1 {
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 
 h2 {
-  font-size: 1.44rem !important;
-  font-size: 14px;
+  font-size: 1.96rem !important;
+  font-size: 12px;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 300px) {
   h2 {
-    font-size: calc(14px + 10 * ((100vw - 320px) / 980));
+    font-size: calc(12px + 6 * ((100vw - 300px) / 1100));
   }
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1400px) {
   h2 {
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 
 h3 {
-  font-size: 1.44rem !important;
-  font-size: 14px;
+  font-size: 1.4rem !important;
+  font-size: 12px;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 300px) {
   h3 {
-    font-size: calc(14px + 10 * ((100vw - 320px) / 980));
+    font-size: calc(12px + 6 * ((100vw - 300px) / 1100));
   }
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1400px) {
   h3 {
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 
@@ -120,71 +120,71 @@ h3 {
 .long-card {
   width: 80vw;
   height: 25vh;
-  margin: 2em auto;
+  margin: 2rem auto;
   -webkit-box-shadow: 0px -2px 41px rgba(64, 61, 119, 0.18), 0px -0.25043px 5.13384px rgba(56, 53, 116, 0.085);
           box-shadow: 0px -2px 41px rgba(64, 61, 119, 0.18), 0px -0.25043px 5.13384px rgba(56, 53, 116, 0.085);
-  padding: 1.5em;
+  padding: 1.5rem;
   border-radius: 9px;
 }
 
 .big-cards {
   width: 20rem;
   height: 50vh;
-  margin: 2em auto;
+  margin: 2rem auto;
   -webkit-box-shadow: 0px -2px 41px rgba(64, 61, 119, 0.18), 0px -0.25043px 5.13384px rgba(56, 53, 116, 0.085);
           box-shadow: 0px -2px 41px rgba(64, 61, 119, 0.18), 0px -0.25043px 5.13384px rgba(56, 53, 116, 0.085);
-  padding: 1.5em;
+  padding: 1.5rem;
   border-radius: 9px;
 }
 
 .small-cards {
   width: 15rem;
   height: 20vh;
-  margin: 2em;
+  margin: 2rem;
   -webkit-box-shadow: 0px -2px 41px rgba(64, 61, 119, 0.18), 0px -0.25043px 5.13384px rgba(56, 53, 116, 0.085);
           box-shadow: 0px -2px 41px rgba(64, 61, 119, 0.18), 0px -0.25043px 5.13384px rgba(56, 53, 116, 0.085);
-  padding: 1.5em;
+  padding: 1.5rem;
   border-radius: 9px;
   cursor: pointer;
 }
 
 .big-container {
   width: 100vw;
-  padding: 0.5em;
-  margin: 2em auto;
+  padding: 0.5rem;
+  margin: 2rem auto;
 }
 
 .medium-container {
   width: 80vw;
-  padding: 0.5em;
-  margin: 3.5em auto;
+  padding: 0.5rem;
+  margin: 3.5rem auto;
 }
 
 .small-container {
   width: 50vw;
-  padding: 0.5em;
-  margin: 2em auto;
+  padding: 0.5rem;
+  margin: 2rem auto;
 }
 
 .header {
   font-weight: 700;
   font-size: 2rem;
   text-align: center;
-  margin: 1em auto;
+  margin: 1rem auto;
 }
 
 .sub-header {
   font-weight: 700;
   font-size: 1.2rem;
   text-align: center;
-  margin: 1em auto;
+  margin: 1rem auto;
 }
 
 .photos {
   width: 10rem;
   height: 10rem;
   background-color: #383574;
-  margin: 1em;
+  margin: 1rem;
 }
 
 data[hidden="true"] {
@@ -204,9 +204,6 @@ data[hidden="false"] {
 }
 
 .navbar-top {
-  width: 100vw;
-  height: 3rem;
-  background-color: #383574;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -216,6 +213,22 @@ data[hidden="false"] {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: 12px;
+  width: 100vw;
+  height: 3rem;
+  background-color: #383574;
+}
+
+@media screen and (min-width: 300px) {
+  .navbar-top {
+    font-size: calc(12px + 3 * ((100vw - 300px) / 1100));
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .navbar-top {
+    font-size: 15px;
+  }
 }
 
 .navbar-top ul {
@@ -248,7 +261,7 @@ data[hidden="false"] {
 .footer-container {
   background-color: #383574;
   width: 100vw;
-  padding: 3.5em;
+  padding: 3.5rem;
 }
 
 .landing-page-wrapper {
@@ -263,7 +276,7 @@ data[hidden="false"] {
           align-items: center;
   width: 80vw;
   height: 100vh;
-  margin: 0 auto 1em;
+  margin: 0 auto 1rem;
 }
 
 .landing-page-wrapper .landing-page-content {
@@ -280,13 +293,13 @@ data[hidden="false"] {
 
 .landing-page-wrapper .landing-page-content .landing-page-text {
   width: 75%;
-  margin-right: 1em;
+  margin-right: 1rem;
   text-align: center;
 }
 
 .landing-page-wrapper .landing-page-content .landing-page-text p {
   line-height: 120%;
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
 }
 
 .landing-page-wrapper .landing-page-content .landing-page-text #btn-go {
@@ -300,7 +313,7 @@ data[hidden="false"] {
 }
 
 .about-wrapper {
-  margin: 6em auto 6em;
+  margin: 6rem auto 6rem;
 }
 
 .about-wrapper .about-header {
@@ -308,7 +321,7 @@ data[hidden="false"] {
   background-color: #383574;
   color: #5B518F;
   text-align: center;
-  margin: 1em auto;
+  margin: 1rem auto;
 }
 
 .about-wrapper .about-content .about {
@@ -328,12 +341,12 @@ data[hidden="false"] {
   width: 20%;
   height: 95%;
   background-color: #383574;
-  margin: 0 1em;
+  margin: 0 1rem;
 }
 
 .main-feature-wrapper {
   height: 100vh;
-  margin-top: 12em;
+  margin-top: 12rem;
 }
 
 .main-feature-wrapper .features-container {
@@ -435,7 +448,7 @@ data[hidden="false"] {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  padding: 1.5em;
+  padding: 1.5rem;
 }
 
 .choose-bot-wrapper #minang {
@@ -505,7 +518,7 @@ data[hidden="false"] {
   -ms-flex-preferred-size: 70%;
       flex-basis: 70%;
   width: 100%;
-  padding: 0.5em;
+  padding: 0.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
